fix jumpy layout when scrollbar appears

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,12 @@
     --off-white      : #f9f9f9;
 }
 
+/* to fix jumpy scrollbar */
+html {
+    margin-left: calc(100vw - 100%);
+    margin-right: 0;
+}
+
 body {
     font-family: var(--font);
 }
